# ipomoea_bot

./: .gitignore  Cargo.toml  usages.ron
src/: config.rs  funcs.rs  lib.rs  main.rs  message.rs
src/funcs/: dice.rs
